--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,341 @@
 # Compiled Menu Modules
 *.mmx
 
+
+
+
 # Compiled Pre-Linked Libraries
 *.plx
+
+
+----------------------------- jose de jesus morales cruz---------------------6S11
+------------------------------TABLA 1---------------------------------
+CREATE TABLE TABLA_1(
+ID_pro NUMBER (10) PRIMARY KEY not null,
+NOMBRE NVARCHAR2 (30),
+PRECIO NVARCHAR2(30),
+NUM_TIPO NVARCHAR2(30),
+NUM_MAR NVARCHAR2(30)
+);
+drop table TABLA_1;
+------------------------------TABLA 2------------------------------
+CREATE TABLE TABLA_2(
+ID_TIPO NUMBER (10) PRIMARY KEY not null,
+TIPO NVARCHAR2 (30)
+);
+drop TABLE TABLA_2;
+------------------------------TABLA 3---------------------------------
+CREATE TABLE TABLA_3(
+ID_MARCA NUMBER (10) PRIMARY KEY not null,
+MARCA NVARCHAR2 (30)
+);
+
+drop table TABLA_3;
+--------------------------
+
+
+create or replace trigger gato
+before insert on TABLA_1
+for each row
+begin
+if :new.NOMBRE = 'condones' then
+:new.ID_pro := TABLA_1_1.nextval;
+else
+:new.ID_pro :=null;
+end if;
+end;
+-------------------------------------------------
+
+CREATE OR REPLACE TRIGGER TABLA_1_1
+BEFORE INSERT ON TABLA_1
+FOR EACH ROW
+BEGIN
+  
+NULL;
+END;
+----------------------
+
+
+
+
+
+------------------------------
+select*from  TABLA_1  JOIN TABLA_2  on ID_pro = ID_TIPO JOIN TABLA_3  on ID_pro=ID_MARCA;
+
+select NOMBRE,MARCA from TABLA_1  inner JOIN TABLA_3  ON ID_pro = ID_MARCA;
+
+select*from TABLA_1  left JOIN TABLA_2  ON ID_pro = ID_TIPO  and  NUM_TIPO = TIPO;
+
+select*from TABLA_1  right JOIN TABLA_3  ON ID_pro = ID_MARCA  and  NUM_MAR = MARCA;
+
+select*from TABLA_1 Full JOIN TABLA_2  ON ID_pro = ID_TIPO and  NUM_TIPO = TIPO Full JOIN TABLA_3 ON ID_pro = ID_MARCA and  NUM_MAR = MARCA
+where  NUM_TIPO is  null or TIPO is null or MARCA is null  ;
+
+SELECT TIPO FROM TABLA_1 JOIN TABLA_2 ON NUM_TIPO = ID_TIPO JOIN TABLA_3 ON NUM_MAR =ID_MARCA
+where TIPO LIKE 'b%' or TIPO LIKE 'p%';
+
+
+-------------------------
+INSERT INTO TABLA_1 VALUES('1','mexicana','500','1','1');
+INSERT INTO TABLA_1 VALUES('2','coca','400','2','2');
+INSERT INTO TABLA_1 VALUES('3','frijoles','200','3','3');
+INSERT INTO TABLA_1 VALUES('4','rex','100','4','4');
+INSERT INTO TABLA_1 VALUES('5','pasta','150','5','5');
+INSERT INTO TABLA_1 VALUES('6','frutra','110','6','6');
+INSERT INTO TABLA_1 VALUES('7','Refreco','25','7','7');-------------------------------------------------------------------inicia}
+
+INSERT INTO TABLA_1 VALUES('9','agua' ,'30','9','9');
+INSERT INTO TABLA_1 VALUES('10','agua','30','10','10');
+INSERT INTO TABLA_1 VALUES('11','agua','30','11','11');
+INSERT INTO TABLA_1 VALUES('12','agua','30','12','12');
+INSERT INTO TABLA_1 VALUES('13','agua','30','13','13');
+INSERT INTO TABLA_1 VALUES('14','agua','30','14','14');
+INSERT INTO TABLA_1 VALUES('15','agua','30','15','15');
+INSERT INTO TABLA_1 VALUES('16','agua','30','16','16');
+INSERT INTO TABLA_1 VALUES('17','agua','30','17','17');
+INSERT INTO TABLA_1 VALUES('18','agua','30','18','15');
+INSERT INTO TABLA_1 VALUES('19','agua','30','19','18');
+INSERT INTO TABLA_1 VALUES('20','agua','30','20','20');
+INSERT INTO TABLA_1 VALUES('21','agua','30','21','21');
+INSERT INTO TABLA_1 VALUES('22','agua','30','22','22');
+INSERT INTO TABLA_1 VALUES('23','agua','30','23','23');
+INSERT INTO TABLA_1 VALUES('24','agua','30','24','24');
+INSERT INTO TABLA_1 VALUES('25','agua','30','25','25');
+INSERT INTO TABLA_1 VALUES('26','agua','30','26','26');
+INSERT INTO TABLA_1 VALUES('27','agua','30','27','27');
+INSERT INTO TABLA_1 VALUES('28','agua','30','28','28');
+INSERT INTO TABLA_1 VALUES('29','agua','30','29','29');
+INSERT INTO TABLA_1 VALUES('30','agua','30','30','30');
+---------------------------------------------------------------------------------
+INSERT INTO TABLA_1 VALUES('31','frituras','15','31','31');
+INSERT INTO TABLA_1 VALUES('32','frituras','15','32','32');
+INSERT INTO TABLA_1 VALUES('33','frituras','15','33','33');
+INSERT INTO TABLA_1 VALUES('34','frituras','15','34','34');
+INSERT INTO TABLA_1 VALUES('35','frituras','15','35','35');
+INSERT INTO TABLA_1 VALUES('36','frituras','15','36','36');
+INSERT INTO TABLA_1 VALUES('37','frituras','15','37','37');
+INSERT INTO TABLA_1 VALUES('38','frituras','15','38','38');
+INSERT INTO TABLA_1 VALUES('39','frituras','15','39','39');
+INSERT INTO TABLA_1 VALUES('40','frituras','15','40','40');
+INSERT INTO TABLA_1 VALUES('41','frituras','15','41','41');
+INSERT INTO TABLA_1 VALUES('42','frituras','15','42','42');
+INSERT INTO TABLA_1 VALUES('43','frituras','15','43','43');
+INSERT INTO TABLA_1 VALUES('44','frituras','15','44','44');
+INSERT INTO TABLA_1 VALUES('45','frituras','15','45','45');
+INSERT INTO TABLA_1 VALUES('46','frituras','15','46','46');
+INSERT INTO TABLA_1 VALUES('47','frituras','15','47','47');
+
+
+-----------------------------------------------------------------------------------------
+INSERT INTO TABLA_1 VALUES('48','fruta','20','48','48');
+INSERT INTO TABLA_1 VALUES('49','fruta','20','49','49');
+
+
+-------------------------------------------------------------------------
+INSERT INTO TABLA_1 VALUES('50','tortas','49','8','8');
+INSERT INTO TABLA_1 VALUES('51','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('52','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('53','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('54','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('55','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('56','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('57','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('58','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('59','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('60','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('61','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('62','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('63','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('64','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('65','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('66','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('67','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('68','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('69','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('70','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('71','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('72','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('73','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('74','tortas','59','8','8');
+INSERT INTO TABLA_1 VALUES('75','tortas','59','8','8');
+
+------------------------------ 
+-------------------------
+
+INSERT INTO TABLA_2 VALUES('1','pizza');
+INSERT INTO TABLA_2 VALUES('2','refeesco');
+INSERT INTO TABLA_2 VALUES('3','sopes');
+INSERT INTO TABLA_2 VALUES('4','barbacoa');
+INSERT INTO TABLA_2 VALUES('5','boloñesa');
+INSERT INTO TABLA_2 VALUES('6','simple');   ----------------------------------------------------------------------------
+INSERT INTO TABLA_2 VALUES('7','cafe'); 
+INSERT INTO TABLA_2 VALUES('8','fresa'); 
+INSERT INTO TABLA_2 VALUES('9','papaya'); 
+INSERT INTO TABLA_2 VALUES('11','limon');
+INSERT INTO TABLA_2 VALUES('12','salsa');
+INSERT INTO TABLA_2 VALUES('13','sandia');
+INSERT INTO TABLA_2 VALUES('14','platano');
+INSERT INTO TABLA_2 VALUES('15','uva');
+INSERT INTO TABLA_2 VALUES('16','coco');
+INSERT INTO TABLA_2 VALUES('17','marucuya');
+INSERT INTO TABLA_2 VALUES('18','sandia');
+INSERT INTO TABLA_2 VALUES('19','pepino');
+INSERT INTO TABLA_2 VALUES('20','piña');
+INSERT INTO TABLA_2 VALUES('21','guayava');
+INSERT INTO TABLA_2 VALUES('22','orchota');
+INSERT INTO TABLA_2 VALUES('23','jamaica');
+INSERT INTO TABLA_2 VALUES('24','agua puerca');
+INSERT INTO TABLA_2 VALUES('25','kiwi');
+INSERT INTO TABLA_2 VALUES('26','naraja');
+INSERT INTO TABLA_2 VALUES('27','arros');
+INSERT INTO TABLA_2 VALUES('28','abena');
+INSERT INTO TABLA_2 VALUES('29','tuna');
+INSERT INTO TABLA_2 VALUES('30','menta');
+
+INSERT INTO TABLA_2 VALUES('31','sabritas');
+INSERT INTO TABLA_2 VALUES('32','chetos');
+INSERT INTO TABLA_2 VALUES('33','doritos');
+INSERT INTO TABLA_2 VALUES('34','totop');
+INSERT INTO TABLA_2 VALUES('35','nachos');
+INSERT INTO TABLA_2 VALUES('36','cavahuates');
+INSERT INTO TABLA_2 VALUES('37','runes');
+INSERT INTO TABLA_2 VALUES('38','flemi');
+INSERT INTO TABLA_2 VALUES('39','chips');
+INSERT INTO TABLA_2 VALUES('40','queso');
+INSERT INTO TABLA_2 VALUES('41','jalapeños');
+INSERT INTO TABLA_2 VALUES('42','salados');
+INSERT INTO TABLA_2 VALUES('43','chetos rojos');
+INSERT INTO TABLA_2 VALUES('44','chetos azules');
+INSERT INTO TABLA_2 VALUES('45','chetos verdes');
+INSERT INTO TABLA_2 VALUES('46','chetos naranja');
+INSERT INTO TABLA_2 VALUES('47','chetos blancos');
+--------------------------------------------------
+INSERT INTO TABLA_2 VALUES('48','hagertina');
+INSERT INTO TABLA_2 VALUES('49','gringa');
+INSERT INTO TABLA_2 VALUES('50','hawayana');
+INSERT INTO TABLA_2 VALUES('51','salchicha');
+INSERT INTO TABLA_2 VALUES('52','jamo');
+INSERT INTO TABLA_2 VALUES('53','africana');
+INSERT INTO TABLA_2 VALUES('54','frijol');
+INSERT INTO TABLA_2 VALUES('55','solito');
+INSERT INTO TABLA_2 VALUES('56','huevo');
+INSERT INTO TABLA_2 VALUES('57','la de chavo');
+INSERT INTO TABLA_2 VALUES('58','tiburon');
+INSERT INTO TABLA_2 VALUES('59','pescado');
+INSERT INTO TABLA_2 VALUES('60','pobre');
+INSERT INTO TABLA_2 VALUES('61','ingeniero');
+INSERT INTO TABLA_2 VALUES('62','de rico');
+INSERT INTO TABLA_2 VALUES('63','de mi mamá');
+INSERT INTO TABLA_2 VALUES('63','de mi papá');
+INSERT INTO TABLA_2 VALUES('64','de mi tia');
+INSERT INTO TABLA_2 VALUES('65','alpasto');
+INSERT INTO TABLA_2 VALUES('66','suadero');
+INSERT INTO TABLA_2 VALUES('67','la robada');
+INSERT INTO TABLA_2 VALUES('68','huerfana');
+INSERT INTO TABLA_2 VALUES('69','salmon');
+INSERT INTO TABLA_2 VALUES('70','la que tiran');
+INSERT INTO TABLA_2 VALUES('71','norteña');
+INSERT INTO TABLA_2 VALUES('72','mexica');
+INSERT INTO TABLA_2 VALUES('73','alemana');
+INSERT INTO TABLA_2 VALUES('74','del profe');
+INSERT INTO TABLA_2 VALUES('75','tesoem');
+-------------------------------------------------------------- prodcutos que no estan relaccionados
+INSERT INTO TABLA_2 VALUES('76','condones');
+INSERT INTO TABLA_2 VALUES('77','cahuama');
+INSERT INTO TABLA_2 VALUES('78','ropa','259');
+INSERT INTO TABLA_2 VALUES('79','condones');
+INSERT INTO TABLA_2 VALUES('80','condones');
+---------------------------------------------
+
+
+INSERT INTO TABLA_2 VALUES('10','banana');
+SELECT * FROM TABLA_2;
+-------------------------
+INSERT INTO TABLA_3 VALUES('1','dominos');
+INSERT INTO TABLA_3 VALUES('2','cocola');
+INSERT INTO TABLA_3 VALUES('3','la costeña');
+INSERT INTO TABLA_3 VALUES('4','la doña');
+INSERT INTO TABLA_3 VALUES('5','valses');
+INSERT INTO TABLA_3 VALUES('6','mercado');
+INSERT INTO TABLA_3 VALUES('7','La_doña');-------------------------------------------------------------------------
+INSERT INTO TABLA_3 VALUES('8','La_doña');
+INSERT INTO TABLA_3 VALUES('9','La_doña');
+INSERT INTO TABLA_3 VALUES('10','La_doña');
+INSERT INTO TABLA_3 VALUES('11','La_doña');
+INSERT INTO TABLA_3 VALUES('12','La_doña');
+INSERT INTO TABLA_3 VALUES('13','La_doña');
+INSERT INTO TABLA_3 VALUES('14','La_doña');
+INSERT INTO TABLA_3 VALUES('15','La_doña');
+INSERT INTO TABLA_3 VALUES('16','La_doña');
+INSERT INTO TABLA_3 VALUES('17','La_doña');
+INSERT INTO TABLA_3 VALUES('18','La_doña');
+INSERT INTO TABLA_3 VALUES('19','La_doña');
+INSERT INTO TABLA_3 VALUES('20','La_doña');
+INSERT INTO TABLA_3 VALUES('21','La_doña');
+INSERT INTO TABLA_3 VALUES('22','La_doña');
+INSERT INTO TABLA_3 VALUES('23','La_doña');
+INSERT INTO TABLA_3 VALUES('24','La_doña');
+INSERT INTO TABLA_3 VALUES('25','La_doña');
+INSERT INTO TABLA_3 VALUES('26','La_doña');
+INSERT INTO TABLA_3 VALUES('27','La_doña');
+INSERT INTO TABLA_3 VALUES('28','La_doña');
+INSERT INTO TABLA_3 VALUES('29','La_doña');
+INSERT INTO TABLA_3 VALUES('30','La_doña');
+-----------------------------
+INSERT INTO TABLA_3 VALUES('31','sabritas');
+INSERT INTO TABLA_3 VALUES('32','sabritas');
+INSERT INTO TABLA_3 VALUES('33','sabritas');
+INSERT INTO TABLA_3 VALUES('34','sabritas');
+INSERT INTO TABLA_3 VALUES('35','sabritas');
+INSERT INTO TABLA_3 VALUES('36','sabritas');
+INSERT INTO TABLA_3 VALUES('37','sabritas');
+INSERT INTO TABLA_3 VALUES('38','sabritas');
+INSERT INTO TABLA_3 VALUES('39','chestrer');
+INSERT INTO TABLA_3 VALUES('40','chestrer');
+INSERT INTO TABLA_3 VALUES('41','chestrer');
+INSERT INTO TABLA_3 VALUES('42','chestrer');
+INSERT INTO TABLA_3 VALUES('43','chestrer');
+INSERT INTO TABLA_3 VALUES('44','chestrer');
+INSERT INTO TABLA_3 VALUES('45','chestrer');
+INSERT INTO TABLA_3 VALUES('46','chestrer');
+INSERT INTO TABLA_3 VALUES('47','chestrer');
+---------------------------------------------------
+INSERT INTO TABLA_3 VALUES('48','señora');
+INSERT INTO TABLA_3 VALUES('49','señora');
+INSERT INTO TABLA_3 VALUES('50','señora');
+----------------------------------
+INSERT INTO TABLA_3 VALUES('51','señor');
+INSERT INTO TABLA_3 VALUES('52','señor');
+INSERT INTO TABLA_3 VALUES('53','señor');
+INSERT INTO TABLA_3 VALUES('54','señor');
+INSERT INTO TABLA_3 VALUES('55','señor');
+INSERT INTO TABLA_3 VALUES('56','señor');
+INSERT INTO TABLA_3 VALUES('57','señor');
+INSERT INTO TABLA_3 VALUES('58','señor');
+INSERT INTO TABLA_3 VALUES('59','señor');
+INSERT INTO TABLA_3 VALUES('60','señor');
+INSERT INTO TABLA_3 VALUES('61','señor');
+INSERT INTO TABLA_3 VALUES('62','señor');
+INSERT INTO TABLA_3 VALUES('63','señor');
+INSERT INTO TABLA_3 VALUES('64','señor');
+INSERT INTO TABLA_3 VALUES('65','señor');
+INSERT INTO TABLA_3 VALUES('66','señor');
+INSERT INTO TABLA_3 VALUES('67','señor');
+INSERT INTO TABLA_3 VALUES('68','señor');
+INSERT INTO TABLA_3 VALUES('69','señor');
+INSERT INTO TABLA_3 VALUES('70','señor');
+INSERT INTO TABLA_3 VALUES('71','señor');
+INSERT INTO TABLA_3 VALUES('72','señor');
+INSERT INTO TABLA_3 VALUES('73','señor');
+INSERT INTO TABLA_3 VALUES('74','señor');
+INSERT INTO TABLA_3 VALUES('75','señor');
+
+---------------------------
+
+INSERT INTO TABLA_3 VALUES('76','caverna');
+INSERT INTO TABLA_3 VALUES('77','caverna');
+INSERT INTO TABLA_3 VALUES('78','caverna');
+INSERT INTO TABLA_3 VALUES('79','caverna');
+INSERT INTO TABLA_3 VALUES('80','caverna');
+
+---------------nombre y precio tabla 1 tabla 2 marca 
